--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "hugeicons-react": "^0.3.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
