--- a/front/package.json
+++ b/front/package.json
@@ -12,12 +12,13 @@
     "@clerk/nextjs": "^6.9.14",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.1",
+    "@mui/material": "^6.4.1",
     "hugeicons-react": "^0.3.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
