--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "dompurify": "^3.2.3",
+    "highlight.js": "^11.11.1",
     "hugeicons-react": "^0.3.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-quill-new": "^3.3.3",
