--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=debug
+jwt.secret-key=adfasdfjnonqiero2341234i12312i1201nifqnw0fasdjaniw
