--- a/front/package.json
+++ b/front/package.json
@@ -19,9 +19,9 @@
     "dompurify": "^3.2.3",
     "highlight.js": "^11.11.1",
     "hugeicons-react": "^0.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.3",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "quill": "^2.0.3",
     "react": "^19.0.0",
