--- a/front/package.json
+++ b/front/package.json
@@ -14,11 +14,13 @@
     "@mui/material": "^6.4.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
+    "@types/jsonwebtoken": "^9.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.3",
     "highlight.js": "^11.11.1",
     "hugeicons-react": "^0.3.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.3",
