--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@shadcn/ui": "^0.0.4",
     "@types/jsonwebtoken": "^9.0.8",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.3",
     "highlight.js": "^11.11.1",
